--- a/JenkinsConsole/.editorconfig
+++ b/JenkinsConsole/.editorconfig
@@ -1,4 +1,4 @@
 ﻿[*.cs]
 
 # CS0219: Variable is assigned but its value is never used
-dotnet_diagnostic.CS0219.severity = warning
+dotnet_diagnostic.CS0219.severity = error
